<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_language">
        <ListPreference
            android:key="pref_language"
            android:title="@string/settings_language"
            android:summary="@string/language_summary"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_playlists">
        <Preference
            android:key="pref_manage_sources"
            android:title="@string/settings_playlists"
            android:summary="@string/sources_summary"
            android:icon="@drawable/ic_live_tv" />
        <SwitchPreferenceCompat
            android:key="pref_auto_refresh"
            android:title="@string/auto_refresh"
            android:summary="@string/auto_refresh_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:key="pref_about"
            android:title="@string/settings_about"
            android:summary="@string/about_summary"
            android:icon="@drawable/ic_settings" />
    </PreferenceCategory>

</PreferenceScreen>
