<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_live_tv"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/nav_live_tv" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/nav_guide"
        android:icon="@drawable/ic_guide"
        android:title="@string/nav_guide" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>